google login, havent optimize & frontend final process

--- a/book-network-ui/package.json
+++ b/book-network-ui/package.json
@@ -22,6 +22,7 @@
     "@auth0/angular-jwt": "^5.2.0",
     "@fortawesome/fontawesome-free": "^6.6.0",
     "angular-code-input": "^2.0.0",
+    "angular-oauth2-oidc": "^17.0.2",
     "bootstrap": "^5.3.3",
     "ng-openapi-gen": "^0.51.0",
     "rxjs": "~7.8.0",
